@@ -1,5 +1,6 @@
 Features:
- * Added scaling support! You can now scale the interface in the "File->Preferences" panel.
+ * Added scaling support! You can now scale the interface in the "Preferences" panel.
+ * Added customizable color schemas. Could be found in the "Preferences".
 
 --------------------------------------
  v1.5.0 (2020-05-26)
